Fixed some footer alignments

--- a/src/components/styles/Card.css
+++ b/src/components/styles/Card.css
@@ -8,7 +8,7 @@
     padding: 2%;
     border: 1px solid black;
     flex: 1 0 0px;
-    margin: 0.5%;
+    margin: 0;
 }
 
 .service-name{
