--- a/src/components/styles/Footer.css
+++ b/src/components/styles/Footer.css
@@ -1,11 +1,9 @@
 #main-footer{
     background-color: #171717;
-    padding: 2%;
-    padding-bottom: 5%;
+    padding: 2% calc(var(--bs-gutter-x) * .5);
     display: flex;
     align-self: center;
-    align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
 #media{
@@ -13,10 +11,19 @@
     flex-direction: column;
 }
 
-.image-space{
-    margin-right: 5%;
+.flex-footer-logo{
+    width: 5rem;
+    height: 5rem;
 }
 
+.linkedin-footer-logo{
+    width: 3rem;
+    height: 3rem;
+    margin: 0rem 1rem !important;
+}
+.linkedin-footer-text{
+    margin-bottom: 0;
+}
 .footer-text-items{
     margin: -2%;
 }
@@ -29,7 +36,7 @@
 
 .footer-sub{
     /* border: 1px solid red; */
-    height: 20vh;
+    height: 12rem;
     text-align: left;
 }
 
