--- a/src/pages/styles/Homepage.css
+++ b/src/pages/styles/Homepage.css
@@ -4,6 +4,7 @@
     justify-content:space-between;
     align-items:center;
     align-self: center;
+    gap: 10px;
   }
   
   /* .animate__animated.animate__slideInUp {
